<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Dmitriy Tarasov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScreenContent.Vertical">

    <TextView
        style="@style/Section"
        android:id="@+id/title"
        android:text="@string/subject"/>

    <EditText
        style="@style/Row"
        android:id="@+id/subject"
        android:layout_below="@+id/title"
        android:text="@string/default_subject"
        android:inputType="phone"/>

    <TextView
        style="@style/Section"
        android:id="@+id/text_title"
        android:layout_below="@+id/subject"
        android:text="@string/text_to_share"/>

    <EditText
        style="@style/Row"
        android:id="@+id/text"
        android:layout_below="@+id/text_title"
        android:text="@string/default_text"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="shareTextClick"
        android:text="@string/share_text"/>

</RelativeLayout>