<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:text="@string/file_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/file_name"
        android:text="@string/default_file_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <Button
        android:id="@+id/capture"
        android:text="@string/button_capture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>